Thu Apr  3 19:23:53 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ConfigTransports/publisher.cpp:

          Clean up and shut down publisher properly.

Thu Apr  3 17:50:59 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/TransientLocalTest/DataReaderListener.cpp:

          Check sample_info for valid_data prior to incrementing num_reads
          and checking msg.count.

Thu Mar 20 17:54:24 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * bin/expfile.pl:

          replace perl with special variable $^X in system call so PATH to
          perl will not be lost.

Fri Mar 14 15:31:34 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/ZeroCopyDataReaderListener/ZeroCopyDataReaderListener.mpc:

          Fix dependencies/libs

Thu Mar 13 15:01:09 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * README:

          Fixed Fuzz.

        * dds/DCPS/AssociationData.h:

          Fixed warning - precedence of >> vs comparison.

        * tests/DCPS/Reliability/pub/Publisher.cpp:

          Fixed warning - sprintf size.

        * tests/DCPS/ZeroCopyDataReaderListener/ZeroCopyDataReaderListener.mpc:

          Fixed project name length warning.

        * tests/DCPS/ManyTopicMultiProcess:
        * tests/DCPS/SubscriberCycle:
        * tests/DCPS/UnitTests:

          Set svn:ignore.

Wed Mar 12 23:26:36 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * dds/DCPS/RakeResults_T.cpp:
        * tests/DCPS/ZeroCopyDataReaderListener/DataReaderListener.cpp:

          Fuzz failures.

        * tests/DCPS/ZeroCopyDataReaderListener/ZeroCopyDataReaderListener.mpc:

          Project names too long.

Wed Mar 12 18:01:30 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reliability/pub/Publisher.cpp:

          Build warnings.

Wed Mar 12 16:57:47 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * tests/DCPS/Reliability/sub/Subscriber.cpp:
